--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "linkedom": "^0.18.12",
-    "next": "16.0.0",
     "openai": "^6.7.0",
     "papaparse": "^5.5.3",
     "puppeteer": "^24.27.0",
     "puppeteer-core": "^24.27.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "next": "^16.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -35,8 +35,9 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
